--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   var timeDelta = 50;  //changes animation speed, higher = slower
   var dataReady = false;
   var animationLoop = [];
+  var loopI = 0;
   var direction;
   
   function draw(){
