added border and idle animation
need to tweak idle

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     var init_size = true;
     window.addEventListener('resize', resizeCanvas, false);
     function resizeCanvas() {
+      //console.log("border size:");
       canvas.width = window.innerWidth;
+      //console.log(canvas.width);
       canvas.height = window.innerHeight;
+      //console.log(canvas.height);
       if (init_size) {
         init_size = false;
         return;
@@ -44,7 +47,9 @@
     var status = "idle";
 
     function draw() {
-
+      //console.log("border size:");
+      //console.log(canvas.width);
+      //console.log(canvas.height);
       window.requestAnimationFrame(draw);
       //console.log("Drawing");
 
@@ -66,8 +71,16 @@
       $(document).on("mousedown", function () {
         status = "moving";
         //get coordinates of mouse
+        //since you can't click off of the page, the only thing I need to do is make sure the image isn't cut off
+        //just adjusting the coordinates if they are too far over
         x_dest = event.pageX;
+        if(x_dest > canvas.width - 100){
+          x_dest = canvas.width - 160;
+        }
         y_dest = event.pageY;
+        if(y_dest > canvas.height - 100){
+          y_dest = canvas.height - 160;
+        }
         console.log(x_dest);
         console.log(y_dest);
       });
@@ -176,8 +189,20 @@
                 context.drawImage(img, x, y, 134, 142);
                 break;
       }
+      while (status == "idle"){
+        //idle
+        //animation
+        loopI++;
+        if (loopI > 20) {
+          loopI = 0;
+        }
+        //maybe a timer for how often it does it
+        img.src = animationLoop[loopI];
+        //console.log("idle hit");
+                context.drawImage(img, x, y, 134, 142);
+                break;
+      }
     context.drawImage(img, x, y, 134, 142);
-    status = "idle";
     }
 
     $(document).ready(function () {
